test/testdata/variables/blank_access_error.lox
print _; // error: _ cannot be used as a value
